# crud-rust

./: Cargo.toml
src/: main.rs
src/categories/: models.rs  services.rs
src/products/: models.rs  services.rs
src/users/: models.rs  services.rs
