[package]
name = "crud-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "=0.7.5", features = ["http1", "macros"] }
tower-http = { version = "0.6.1", features = ["cors", "trace"] }
tokio = { version = "1.0", features = ["full"] }
http = "1.1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
